# node9-python

./: CHANGELOG.md  LICENSE  README.md  conftest.py  manual_test.py  pyproject.toml
.githooks/: pre-commit  pre-push  run-tests.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ai-review.yml  auto-pr.yml  ci.yml  release.yml
examples/: basic.py  crewai_agent.py  langchain_agent.py  manual_test.py
node9/: __init__.py  _agent.py  _client.py  _config.py  _decorator.py  _dlp.py  _exceptions.py
scripts/: ai-review.mjs  e2e.sh
tests/: test_agent.py  test_client.py  test_config.py  test_decorator.py  test_dlp.py  test_exceptions.py
